Solve contrast issues

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ body {
 
   /* Primary/B400 */
 
-  color: #6070ff;
+  color: #0016db;
 
   /* Inside auto layout */
 
@@ -129,7 +129,7 @@ body {
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  color: #7f8cff;
+  color: #0f27fF;
 }
 
 .let-s-connect-2 {
@@ -396,7 +396,7 @@ h5 {
 
   /* Neutrals/N100 */
 
-  color: #7a869a;
+  color: #4b5363;
 
   /* Inside auto layout */
 
@@ -468,7 +468,7 @@ h5 {
 
   /* Neutrals/N100 */
 
-  color: #7a869a;
+  color: #485260;
 
   /* Inside auto layout */
 
@@ -579,7 +579,7 @@ h5 {
 
   /* Primary/B400 */
 
-  color: #6070ff;
+  color: #0018f0;
 
   /* Inside auto layout */
 
@@ -638,7 +638,7 @@ h5 {
 
   /* Primary/B400 */
 
-  color: #6070ff;
+  color: #0018f0;
 
   /* Inside auto layout */
 
@@ -697,7 +697,7 @@ h5 {
 
   /* Primary/B400 */
 
-  color: #6070ff;
+  color: #0018f0;
 
   /* Inside auto layout */
 
@@ -836,7 +836,7 @@ h5 {
 
   /* Primary/B500 */
 
-  color: #396df2;
+  color: #0c3cb6;
 }
 
 .about-myself {
@@ -921,7 +921,7 @@ h5 {
   font-style: normal;
   font-weight: 500;
   font-size: 16.9px;
-  color: #396df2;
+  color: #0c3fc0;
 }
 
 button:hover {
